--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Pods/*
 Pods/*/**
 Sworm.xcodeproj/xcuserdata/*/**
+
+Sworm.xcworkspace/xcuserdata/wilbertribeiro.xcuserdatad/UserInterfaceState.xcuserstate
